rendering the look of the home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,37 @@
-<%- include('../includes/head'); -%>
-<body>
-<%- include('../includes/navigation'); -%>
+<%- include('includes/head'); -%>
+    <link rel="stylesheet" href="/css/home.css">
+</head>
+<body class="home">
+<%- include('includes/navigation'); -%>
+<div class="card m-3 border-primary">
+    <div class="card-header border-primary">
+        Cheraga
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">10-08-2022</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">States List</a>
+    </div>
+</div>
+<div class="card m-3 border-primary">
+    <div class="card-header border-primary">
+      Cheraga
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Visite de 10-08-2022</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Tasks List</a>
+    </div>
+</div>
+<div class="card m-3 border-primary">
+    <div class="card-header border-primary">
+      Cheraga
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Visite de 10-08-2022</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Tasks List</a>
+    </div>
+</div>
 
-<%- include('../includes/footer'); -%>
+<%- include('includes/footer'); -%>
