--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -3,6 +3,9 @@
 </head>
 <body class="text-center">
     <main class="form-signin w-100 m-auto border border-primary rounded-2">
+        <% if (errors !== null) { %>
+            <%- include('../includes/errors'); -%>
+        <% } %>
         <form action="/authentication/login" method="POST">
             <img src="/images/techno.png" alt="logo" width="180" height="50">
             <h1 class="h4 mb-3 fw-normal mt-3">Please sign in</h1>
