--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar  bg-primary fixed-top">
+<nav class="navbar bg-primary fixed-top text-center">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"><img src="/images/techno.png" alt="logo" width="120" height="30"></a>
     <button class="navbar-toggler" style="background-color: #FFE50D;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -12,8 +12,13 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link <% if (url === "/") { %> active <% } %>" aria-current="page" href="/">Home</a>
           </li>
+          <% if (canView) { %>
+            <li class="nav-item">
+              <a class="nav-link <% if (url === "/admin/register") { %> active <% } %>" href="/admin/register">User Registration</a>
+            </li>
+          <% } %>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Link</a>
           </li>
