--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,33 +3,33 @@
 </head>
 <body class="home">
 <%- include('includes/navigation'); -%>
-<div class="card m-3 border-primary">
+<div class="card m-3 border-primary d-md-inline-flex d-lg-inline-flex">
     <div class="card-header border-primary">
         Cheraga
     </div>
     <div class="card-body">
       <h5 class="card-title">10-08-2022</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">With supporting text below as a</p>
       <a href="#" class="btn btn-primary">States List</a>
     </div>
 </div>
-<div class="card m-3 border-primary">
+<div class="card m-3 border-primary d-md-inline-flex d-lg-inline-flex">
     <div class="card-header border-primary">
       Cheraga
     </div>
     <div class="card-body">
-      <h5 class="card-title">Visite de 10-08-2022</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Visit de 10-08-2022</h5>
+      <p class="card-text">With supporting text below as a</p>
       <a href="#" class="btn btn-primary">Tasks List</a>
     </div>
 </div>
-<div class="card m-3 border-primary">
+<div class="card m-3 border-primary d-md-inline-flex d-lg-inline-flex">
     <div class="card-header border-primary">
       Cheraga
     </div>
     <div class="card-body">
-      <h5 class="card-title">Visite de 10-08-2022</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Visit de 10-08-2022</h5>
+      <p class="card-text">With supporting text below as a</p>
       <a href="#" class="btn btn-primary">Tasks List</a>
     </div>
 </div>
