sessions auth and register user is done

--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -6,7 +6,7 @@
         <% if (errors !== null) { %>
             <%- include('../includes/errors'); -%>
         <% } %>
-        <form action="/authentication/login" method="POST">
+        <form action="/auth/login" method="POST">
             <img src="/images/techno.png" alt="logo" width="180" height="50">
             <h1 class="h4 mb-3 fw-normal mt-3">Please sign in</h1>
             <div class="form-floating mb-3">
