--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -19,9 +19,13 @@
               <a class="nav-link <% if (url === "/admin/register") { %> active <% } %>" href="/admin/register">User Registration</a>
             </li>
           <% } %>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Link</a>
-          </li>
+          <% if (isAuthenticated) { %>
+            <li class="nav-item">
+              <form action="/auth/logout" method="POST">
+                <button type="submit" class="btn btn-link">Logout</a>
+              </form>
+            </li>
+          <% } %>
         </ul>
       </div>
     </div>
