users management and csurf

--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -36,6 +36,7 @@
                 <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password">
                 <label for="floatingPassword">Confirm Password</label>
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Register</button>
         </form>
     </main>
