--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -17,6 +17,7 @@
                 <input type="password" class="form-control" name="password" placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
         </form>
     </main>
