eslint configured and user management by admin

--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -22,7 +22,7 @@
                 <option value="admin">Admin</option>
                 <option value="user">User</option>
             </select>
-            <select class="form-select mb-3" aria-label="function" name="function" id="function" <% if (body !== null) { %> data-value="<%= body.function %>"<% } %>>
+            <select class="form-select mb-3" aria-label="function" name="func" id="function" <% if (body !== null) { %> data-value="<%= body.func %>"<% } %>>
                 <option selected disabled hidden>Select a function</option>
                 <option value="technician">Technician</option>
                 <option value="engineer">Engineer</option>
