--- a/views/admin/edituser.ejs
+++ b/views/admin/edituser.ejs
@@ -14,7 +14,7 @@
                 <label for="email">Name</label>
             </div>
             <div class="form-floating mb-3 disabled">
-                <input type="email" class="form-control" name="email" id="email" placeholder="email" <% if (user !== null) { %> value="<%= user.email %>"<% } %> disabled>
+                <input type="email" class="form-control" name="email" id="email" placeholder="email" <% if (user !== null) { %> value="<%= user.email %>"<% } %> >
                 <label for="email">Email address</label>
             </div>
             <select class="form-select mb-3" aria-label="role" name="role" id="role" <% if (user !== null) { %> data-value="<%= user.role %>"<% } %>>
@@ -22,7 +22,7 @@
                 <option value="admin">Admin</option>
                 <option value="user">User</option>
             </select>
-            <select class="form-select mb-3" aria-label="function" name="function" id="function" <% if (user !== null) { %> data-value="<%= user.function %>"<% } %>>
+            <select class="form-select mb-3" aria-label="function" name="func" id="function" <% if (user !== null) { %> data-value="<%= user.func %>"<% } %>>
                 <option selected disabled hidden>Select a function</option>
                 <option value="technician">Technician</option>
                 <option value="engineer">Engineer</option>
@@ -40,12 +40,6 @@
                 <input class="form-check-input" type="checkbox" name="changePassword" id="changPassword">
                 <label class="form-check-label" for="changPassword">
                   Change Password
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="deleteAccount" id="deleteAccount">
-                <label class="form-check-label text-danger" for="deleteAccount">
-                  Delete Account
                 </label>
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
