--- a/views/includes/flashErrors.ejs
+++ b/views/includes/flashErrors.ejs
@@ -1,10 +1,12 @@
-
-    <div class="alert alert-danger mx-5 d-flex justify-content-between" role="alert">
-        <%= error[0] %>
+<% if (success) { %>
+    <div class="alert alert-success mx-3 d-flex justify-content-between" role="alert">
+        <%= success %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-
-    <div class="alert alert-success mx-5 d-flex justify-content-between" role="alert">
-        <%= success[0] %>
+    </div>    
+<% } %>
+<% if (error) { %>
+    <div class="alert alert-danger mx-3 d-flex justify-content-between" role="alert">
+        <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+    </div>    
+<% } %>
