--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -18,10 +18,10 @@
           <% if (canView) { %>
             <hr>
             <li class="nav-item">
-              <a class="nav-link <% if (url === "/admin/register") { %> active <% } %>" href="/admin/register">User Registration</a>
+              <a class="nav-link <% if (url === "/admin/users") { %> active <% } %>" href="/admin/users">Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link <% if (url === "/admin/users") { %> active <% } %>" href="/admin/users">Users List</a>
+              <a class="nav-link <% if (url === "/admin/stores") { %> active <% } %>" href="/admin/stores">Stores</a>
             </li>
             <hr>
           <% } %>
