--- a/views/admin/users/edituser.ejs
+++ b/views/admin/users/edituser.ejs
@@ -1,11 +1,11 @@
-<%- include('../includes/head'); -%>
+<%- include('../../includes/head'); -%>
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <%- include('../includes/navigation'); -%>
+    <%- include('../../includes/navigation'); -%>
     <main class="form-signin w-100 m-auto border border-primary rounded-2">
         <% if (errors !== null) { %>
-            <%- include('../includes/errors'); -%>
+            <%- include('../../includes/errors'); -%>
         <% } %>
         <form  action="/admin/user/<%= user._id %>" method="POST">
             <h1 class="h4 mb-3 fw-normal mt-3 text-center">Edit account</h1>
@@ -14,7 +14,7 @@
                 <label for="email">Name</label>
             </div>
             <div class="form-floating mb-3 disabled">
-                <input type="email" class="form-control" name="email" id="email" placeholder="email" <% if (user !== null) { %> value="<%= user.email %>"<% } %> >
+                <input type="email" class="form-control" name="email" id="email" placeholder="email" <% if (user !== null) { %> value="<%= user.email %>"<% } %> disabled>
                 <label for="email">Email address</label>
             </div>
             <select class="form-select mb-3" aria-label="role" name="role" id="role" <% if (user !== null) { %> data-value="<%= user.role %>"<% } %>>
@@ -49,4 +49,4 @@
     </main>
 <script src="/js/edituser.js"></script>
 
-<%- include('../includes/footer'); -%>
+<%- include('../../includes/footer'); -%>
