--- a/views/admin/users/register.ejs
+++ b/views/admin/users/register.ejs
@@ -1,13 +1,13 @@
-<%- include('../includes/head'); -%>
+<%- include('../../includes/head'); -%>
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <%- include('../includes/navigation'); -%>
+    <%- include('../../includes/navigation'); -%>
     <main class="form-signin w-100 m-auto border border-primary rounded-2">
         <% if (errors !== null) { %>
-            <%- include('../includes/errors'); -%>
+            <%- include('../../includes/errors'); -%>
         <% } %>
-        <form  action="/admin/register" method="POST">
+        <form  action="/admin/user/register" method="POST">
             <h1 class="h4 mb-3 fw-normal mt-3 text-center">Register a new user</h1>
             <div class="form-floating mb-3">
                 <input type="name" class="form-control" name="name" id="name" placeholder="name" <% if (body !== null) { %> value="<%= body.name %>"<% } %> >
@@ -38,8 +38,9 @@
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Register</button>
+            <a class="w-100 btn btn-lg btn-outline-secondary mt-3" href="/admin/users">Cancel</a>
         </form>
     </main>
 <script src="/js/main.js"></script>
 
-<%- include('../includes/footer'); -%>
+<%- include('../../includes/footer'); -%>
