Added Materials CRUD functions and some bug fixing

--- a/views/admin/stores/addStore.ejs
+++ b/views/admin/stores/addStore.ejs
@@ -1,5 +1,5 @@
 <%- include('../../includes/head'); -%>
-    <link rel="stylesheet" href="/css/addStore.css">
+    <link rel="stylesheet" href="/css/addForm.css">
 </head>
 <body>
     <%- include('../../includes/navigation'); -%>
@@ -28,6 +28,5 @@
             <a class="w-100 btn btn-lg btn-outline-secondary mt-3" href="/admin/stores">Cancel</a>
         </form>
     </main>
-<script src="/js/addStore.js"></script>
 
 <%- include('../../includes/footer'); -%>
