--- a/views/admin/users/users.ejs
+++ b/views/admin/users/users.ejs
@@ -1,5 +1,5 @@
 <%- include('../../includes/head'); -%>
-    <link rel="stylesheet" href="/css/users.css">
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 <body class="home container">
     <%- include('../../includes/navigation'); -%>
