--- a/views/admin/users/register.ejs
+++ b/views/admin/users/register.ejs
@@ -1,5 +1,5 @@
 <%- include('../../includes/head'); -%>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/addForm.css">
 </head>
 <body>
     <%- include('../../includes/navigation'); -%>
