--- a/views/admin/users/users.ejs
+++ b/views/admin/users/users.ejs
@@ -6,7 +6,7 @@
     <%- include('../../includes/flashErrors'); -%>
 <main class="container">
     <div class="d-grid  d-md-flex justify-content-md-end my-3">
-      <a class="btn btn-primary" href="/admin/user/register">Add New Account</a>
+      <a class="btn btn-primary" href="/admin/user/register">Add New User</a>
     </div>
     <table class="table table-striped caption-top table-hover table-bordered border-dark">
         <thead class="table-primary table-bordered border-dark">
