showing visits by users and used moment js

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -14,6 +14,9 @@
           <li class="nav-item">
             <a class="nav-link <% if (url === "/") { %> active <% } %>" aria-current="page" href="/">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link <% if (url === "/visit/register") { %> active <% } %>" aria-current="page" href="/visit/register">Create visit</a>
+          </li>
           
           <% if (canView) { %>
             <hr>
