status operation almost done

--- a/views/admin/materials/addMaterial.ejs
+++ b/views/admin/materials/addMaterial.ejs
@@ -27,7 +27,7 @@
             </div>
             <div class="form-floating mb-3">
                 <textarea class="form-control" name="comment" id="comment" placeholder="comment" <% if (material !== null) { %> value="<%= material.comment %>"<% } %> ></textarea>
-                <label for="inventoryCode">Comment</label>
+                <label for="comment">Comment</label>
             </div>
             <select class="form-select mb-3" aria-label="category" name="category" id="category">
                 <option selected disabled hidden>Select a category</option>
