--- a/views/visit/status.ejs
+++ b/views/visit/status.ejs
@@ -4,46 +4,63 @@
 <body class="home">
   <%- include('../includes/navigation'); -%>
   <%- include('../includes/flashErrors'); -%>
-  <div class="d-grid">
-    <button class="btn btn-danger mx-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle me-1" viewBox="0 0 16 16">
-          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+  <div class="d-flex flex-column mx-3">
+      <p class="mx-3 h3 text-center"><%= visit.store.storeName.toUpperCase() %> </p>
+      <button class="btn btn-primary d-flex justify-content-center align-items-center m-1" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle me-1" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+        Create status
+      </button>
+      <button type="button" class="btn btn-outline-danger d-flex justify-content-center align-items-center m-1" data-bs-toggle="modal" data-bs-target="#closeModel" id="closeButton" data-visit-name="<%= visit.store.storeName %>" data-visit-id="<%= visit._id %>"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle me-2" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
       </svg>
-      Create a status
-    </button>
+      Close Visit</button>
   </div>
   <hr>
-  <% statuses.forEach(status => { %>
-    <div class="card m-3 border-primary ">
-      <div class="card-header border-primary text-center text-primary">
-        <b><%= status.material.materialName %> </b>
+  <% if (statuses.length === 0) { %>
+    <p class="mx-3 h4 text-center">Start your journey by clicking the above button <b class="text-primary">Create status</b></p>
+  <% } else { %>
+    <p class="mx-3 h3 text-primary">Material Status:</p>
+  <% } %>
+   
+  <div class="accordion m-3" id="accordionExample">
+    <% let count = 0 ; statuses.forEach(status => { ++count %>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#id-<%= count %>" aria-expanded="false" aria-controls="id-<%= count %>">
+            <%= status.material.materialName %>
+          </button>
+        </h2>
+        <div id="id-<%= count %>" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <ul class="list-group list-group-flush mb-3">
+                <li class="list-group-item"><b>Clean: </b> <%= status.cleanliness %></li>
+                <li class="list-group-item"><b>Physical State: </b> <%= status.physicalState %></li>
+                <li class="list-group-item"><b>Battery: </b> <%= status.inverterAutonomy %></li>
+                <li class="list-group-item"><b>Antivirus: </b> <%= status.antivirusStatus %></li>
+                <li class="list-group-item"><b>Disk Status: </b> <%= status.diskStatus %></li>
+                <li class="list-group-item"><b>Operation System: </b> <%= status.osState %></li>
+                <li class="list-group-item"><b>Network State: </b> <%= status.networkState %></li>
+                <li class="list-group-item"><b>Windows License: </b> <%= status.windowsLicense %></li>
+                <li class="list-group-item"><b>Office License: </b> <%= status.officeLicense %></li>
+                <li class="list-group-item"><b>Comment: </b> <%= status.comment %></li>
+              </ul>
+            
+            <a href="/status/<%= status._id %>" class="btn btn-primary d-flex justify-content-center align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wrench-adjustable-circle me-2" viewBox="0 0 16 16">
+              <path d="M12.496 8a4.491 4.491 0 0 1-1.703 3.526L9.497 8.5l2.959-1.11c.027.2.04.403.04.61Z"/>
+              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-1 0a7 7 0 1 0-13.202 3.249l1.988-1.657a4.5 4.5 0 0 1 7.537-4.623L7.497 6.5l1 2.5 1.333 3.11c-.56.251-1.18.39-1.833.39a4.49 4.49 0 0 1-1.592-.29L4.747 14.2A7 7 0 0 0 15 8Zm-8.295.139a.25.25 0 0 0-.288-.376l-1.5.5.159.474.808-.27-.595.894a.25.25 0 0 0 .287.376l.808-.27-.595.894a.25.25 0 0 0 .287.376l1.5-.5-.159-.474-.808.27.596-.894a.25.25 0 0 0-.288-.376l-.808.27.596-.894Z"/>
+            </svg>
+            Edit</a>
+          </div>
+        </div>
       </div>
-      <div class="card-body">
-          <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item"><b>Clean: </b> <%= status.cleanliness %></li>
-            <li class="list-group-item"><b>Physical State: </b> <%= status.physicalState %></li>
-            <li class="list-group-item"><b>Onduleur: </b> <%= status.inverterAutonomy %></li>
-            <li class="list-group-item"><b>Antivirus: </b> <%= status.antivirusStatus %></li>
-            <li class="list-group-item"><b>Disk Status: </b> <%= status.diskStatus %></li>
-            <li class="list-group-item"><b> Operation System: </b> <%= status.osState %></li>
-            <li class="list-group-item"><b>Network State: </b> <%= status.networkState %></li>
-            <li class="list-group-item"><b>Windows License: </b> <%= status.windowsLicense %></li>
-            <li class="list-group-item"><b>Office License: </b> <%= status.officeLicense %></li>
-            <li class="list-group-item"><b>Comment: </b> <%= status.comment %></li>
-          </ul>
-        
-        <a href="/status/<%= status._id %>" class="btn btn-primary d-flex justify-content-center align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wrench-adjustable-circle me-2" viewBox="0 0 16 16">
-          <path d="M12.496 8a4.491 4.491 0 0 1-1.703 3.526L9.497 8.5l2.959-1.11c.027.2.04.403.04.61Z"/>
-          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-1 0a7 7 0 1 0-13.202 3.249l1.988-1.657a4.5 4.5 0 0 1 7.537-4.623L7.497 6.5l1 2.5 1.333 3.11c-.56.251-1.18.39-1.833.39a4.49 4.49 0 0 1-1.592-.29L4.747 14.2A7 7 0 0 0 15 8Zm-8.295.139a.25.25 0 0 0-.288-.376l-1.5.5.159.474.808-.27-.595.894a.25.25 0 0 0 .287.376l.808-.27-.595.894a.25.25 0 0 0 .287.376l1.5-.5-.159-.474-.808.27.596-.894a.25.25 0 0 0-.288-.376l-.808.27.596-.894Z"/>
-        </svg>
-        Edit</a>
-      </div>
+    <% }) %>
   </div>
 
-  <% }) %>
-
-<!-- Modal -->
+<!-- Modal create status -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -61,11 +78,33 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a href="#" type="submit" class="btn btn-primary disabled" id="createStatus" data-visit-id ="<%= visitId %>">Create Status</a>
+          <a href="#" type="submit" class="btn btn-primary disabled" id="createStatus" data-visit-id ="<%= visit._id %>">Create Status</a>
         </div>
     </div>
   </div>
 </div>
+
+    <!-- Modal close visit -->
+    <div class="modal fade" id="closeModel" tabindex="-1" aria-labelledby="closeModelLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="closeModelLabel">Close the visit</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              Are you sure you want to close <b id="modal-body-text">your</b> visit?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">no</button>
+            <form action="/visit/close/" method="POST" id="closeForm">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+              <button type="submit" class="btn btn-outline-danger">Yes</button>
+          </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <script src="/js/status.js"></script>
 
